--- a/css/globales.css
+++ b/css/globales.css
@@ -1,3 +1,12 @@
 .clickme {
     cursor: pointer;
 }
+
+.fotoPerfil {
+    width: 100px;
+    height: 100px;
+}
+
+.registroLabel {
+    width: 100px;
+}
