--- a/css/academis.css
+++ b/css/academis.css
@@ -9,3 +9,12 @@
     width: 2.5rem;
     cursor: pointer;
 }
+
+.btn-primary-c {
+    background-color: green;
+    color: white;
+    border-radius: 0.6rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    width: 250px;
+}
